<resources>
    <string name="app_name">SubmissionIntermediate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be at least 8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="coders_story">Coders Story</string>
    <string name="logo">Logo</string>
    <string name="desc">Where programmers share their story, share their lifestyle, share their code. Lets join the fun!</string>
    <string name="login">LOGIN</string>
    <string name="errorsys">Something went wrong</string>
    <string name="sign_up">SIGN UP</string>
    <string name="camera">camera</string>
    <string name="gallery">gallery</string>
    <string name="story_description">Story Description</string>
    <string name="upload">upload</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="logout">Logout</string>
    <string name="join_the_fun">join the fun</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="confirm">yes</string>
    <string name="negative">no</string>
    <string name="popUp">Do you want to exit?</string>
    <string name="regYes">REGISTRATION SUCCESS</string>
    <string name="regNo">REGISTRATION FAILED</string>
    <string name="loginYes">LOGIN SUCCESS</string>
    <string name="loginNo">LOGIN FAILED</string>
    <string name="uploadYes">UPLOAD SUCCESS</string>
    <string name="uploadNo">UPLOAD FAILED, NO PHOTO</string>
    <string name="etName">Your Name</string>
    <string name="etEmail">Your Email</string>
    <string name="etPassword">At least 8 characters</string>
    <string name="errorPassword">Password is at least 8 characters</string>
    <string name="errorDesc">Description should not be empty</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="timeout">Timeout</string>
    <string name="reload">Reload</string>

</resources>